Supplemental Claims | Update content & fix alert visibility (#22992)
* Update Veteran info content

* Update start page content

* Update primary phone content

* Update issue pages

* Update evidence content & fix alerts

* Update tests

* Add restart subtask link to intro

* Update evidence path

* Missing period

--- a/src/applications/appeals/995/sass/995-supplemental-claim.scss
+++ b/src/applications/appeals/995/sass/995-supplemental-claim.scss
@@ -169,6 +169,7 @@ article[data-location="edit-home-phone"] va-text-input[name="extension"] {
   display: none;
 }
 
+article[data-location="contestable-issues"],
 article[data-location$="request-va-medical-records"],
 article[data-location$="request-private-medical-records"],
 article[data-location$="upload-other-evidence"] {
